
  - Changes in TM/ are detected automatically every second. The
modified TMX are reloaded in memory transparently, without having to
reload the project.

  Localisation updates:

  - Dutch localisation updated to 2.5 (UI)

----------------------------------------------------------------------
 OmegaT 2.3.0
 ----------------------------------------------------------------------
   9 Enhancements
   6 Bug fixes
   2 Localisation updates
----------------------------------------------------------------------
2.3.0 vs. 2.2.3 update 4

  Implemented requests:

  - Allow blank translations in PO files
  http://sourceforge.net/support/tracker.php?aid=2974663

  - TransTips to consider letter case
  http://sourceforge.net/support/tracker.php?aid=3027339

  - Ability to translate WordArt in MS Office files
  http://sourceforge.net/support/tracker.php?aid=3311077

  - Add .xliff extension to the XLIFF filter
  http://sourceforge.net/support/tracker.php?aid=3339675

  Other enhancements:

  - In the MS Open XML filter, a new option allows to preserve white space 
(e.g., spaces and newlines) in all tags, even if it is not set technically 
in the document. As it corresponds to the most usual situation (e.g., 
preserving spaces in Excel tags), the option is on by default.

  - New version of the JNA library (used to launch Hunspell), compatible 
with Windows 64-bit

  - New Iceni Infix file filter

  - Partial support for StarDict dictionaries with sametypesequence=h

  - New Flash XML export file filter

  Bug fixes:

  - PO filter mangles \\r strings
  http://sourceforge.net/support/tracker.php?aid=3292553

  - Wrong TransTip when target term contains comma
  http://sourceforge.net/support/tracker.php?aid=2970681

  - LaTeX filter: comments are removed from target documents
  http://sourceforge.net/support/tracker.php?aid=3297471

  - Overeager numbered header segmentation rule
  http://sourceforge.net/support/tracker.php?aid=3308282
